# project_print_f

./: Makefile  ft_flags.c  ft_float.c  ft_gotov.c  ft_precision.c  ft_printf.c  ft_width.c  main.c  printf.c  printf.h
alfa/: .ft_printf.c.swp  .ft_width.c.swp  .main.c.swp  Makefile  finds.c  ft_atoi.c  ft_bzero.c  ft_flags.c  ft_float.c  ft_gotov.c  ft_itoa.c  ft_itoa_base.c  ft_precision.c  ft_printf.c  ft_putstr.c  ft_width.c  main.c  printf  printf.h
dlya_pft/: dop_funcs.c  finds_2.c  ft_bzero.c  ft_flags.c  ft_float.c  ft_gotov.c  ft_itoa_base.c  ft_memalloc.c  ft_memset.c  ft_ostatok.c  ft_precision.c  ft_printf.c  ft_stolbik.c  ft_strdup.c  ft_strjoin.c  ft_strlen.c  ft_strnew.c  ft_width.c  printf.h
free_done/: CMakeLists.txt  Makefile  a.out  dop_funcs_2.c  exception.c  ft_bonus.c  ft_celoe.c  ft_flags.c  ft_float.c  ft_gotov.c  ft_memset.c  ft_precision.c  ft_print_bits.c  ft_printf.c  ft_save.c  ft_stolbik.c  ft_strdup.c  ft_strresub.c  ft_width.c  printf  printf.h  vgcheck
free_done/a.out.dSYM/Contents/Resources/DWARF/: a.out
free_done/libft/: libft.h
free_done/vgcheck.dSYM/Contents/: Info.plist
free_done/vgcheck.dSYM/Contents/Resources/DWARF/: vgcheck
freeedom/: .ft_gotov.c.swp  CMakeLists.txt  Makefile  a.out  exception.c  ft_add_char.c  ft_bonus.c  ft_flags.c  ft_float.c  ft_gotov.c  ft_precision.c  ft_printf.c  ft_save.c  ft_stolbik.c  ft_strdel.c  main.c  (+7 more)
plus_bonus/: CMakeLists.txt  Makefile  finds.c  ft_float.c  ft_gotov.c  ft_printf.c  ft_razrez.c  ft_save.c  ft_strsub.c  ft_width.c  printf.h
plus_bonus/files/: ft_celoe.c  ft_ostatok.c
plus_bonus/libft/: ft_strdup.c
(+42 files in other folders)
